<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    >

    
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center"
        >


        <TextView
            android:id="@+id/tv_feet_ring_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black_text"
            android:text="@string/feet_ring_id"
            android:gravity="center"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black_text"
            android:text="@string/code"
            android:gravity="center"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/tv_insert_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black_text"
            android:text="@string/insert_time"
            android:gravity="center"
            android:layout_weight="1"
            />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bg_line_gray"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

</LinearLayout>