<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.scanpj.work.ui.activity.ScanAnotherScanRecordsActivity">


    <!--标题-->
    <include
        android:id="@+id/include_title_scan_another_records"
        layout="@layout/title_bar_aty_center_left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:id="@+id/ll_top"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/include_title_scan_another_records"
        android:background="@drawable/img_line_1"
        android:gravity="center_vertical"
        android:orientation="horizontal">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/feet_ring_id"
            android:textColor="@color/black_alert_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/code"
            android:textColor="@color/black_alert_3" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/insert_time"
            android:textColor="@color/black_alert_3" />

    </LinearLayout>

    
    
    <View
        android:id="@+id/v_devider_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/ll_top"
        android:background="@color/bg_line_gray2"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/v_devider_line" />


</RelativeLayout>





