<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context="com.scanpj.work.ui.activity.ScanAnotherActivity">


    <!--标题-->
    <include
        android:id="@+id/include_title_scan_another"
        layout="@layout/title_bar_aty_center_all_right_cb2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />







    <RelativeLayout
        android:id="@+id/rl_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/img_line_1"
        android:layout_below="@id/include_title_scan_another"
        >
        <ImageView
            android:id="@+id/iv_left_seen"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"
            android:src="@drawable/img_seen"
            android:padding="15dp"
            />







        <ImageView
            android:id="@+id/iv_right_scan_operate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:src="@drawable/img_scan"
            android:padding="10dp"
            />

    </RelativeLayout>




    <View
        android:id="@+id/v_devider_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@id/rl_top_bar"
        android:background="@color/bg_line_gray2"
        />


    <LinearLayout
        android:id="@+id/ll_title_scan_bar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/white"
        android:layout_below="@id/v_devider_line"
        >


        <ImageView
            android:id="@+id/iv_occupy_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            android:background="@drawable/selector_blue_check_mark_bg"
            android:layout_marginLeft="10dp"
            android:visibility="gone"
            />


        <TextView
            android:id="@+id/tv_feet_ring_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black_text"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/feet_ring_id"
            />
        <TextView
            android:id="@+id/tv_code"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black_text"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/code"
            android:textSize="17sp"
            />


    </LinearLayout>






    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        >

        <View
            android:id="@+id/v_line"
            android:layout_width="match_parent"
            android:layout_height="0.3dp"
            android:background="@color/bg_all"
            />


        <TextView
            android:id="@+id/tv_bottom"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/commite"
            android:background="@drawable/selector_blue_bg"
            android:textSize="@dimen/TEXT_DIMEN_34PX"
            android:layout_margin="10dp"
            android:layout_below="@id/v_line"
            />



        <!--底部-->
        <include
            android:id="@+id/include_title_scan_another_select_bottom"
            layout="@layout/include_scan_another_select_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/v_line"
            />

    </RelativeLayout>








    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nsv_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0.5dp"
        android:layout_below="@id/ll_title_scan_bar"
        android:layout_above="@+id/rl_bottom"
        >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:nestedScrollingEnabled="false"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />



            <TextView
                android:id="@+id/tv_focus"
                android:layout_width="match_parent"
                android:layout_height="0.5dp" />

        </LinearLayout>








    </android.support.v4.widget.NestedScrollView>









    



</RelativeLayout>





